[project]
name = "panel-training"
version = "0"
requires-python = "==3.13.*"
dependencies = [
    "aiohttp",
    "altair",
    "holoviews",
    "hvplot",
    "jupyterlab",
    "jupyterlab-myst",
    "numpy",
    "pandas",
    "panel",
    "pyarrow",
    "pyparsing",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["B", "E", "F", "FLY", "I", "ICN", "PIE", "PLC", "PLE", "PLR", "PLW", "RUF", "UP", "W"]
ignore = [
    "E501", # Line too long
    "E712", # Comparison to true should be is
    "E731", # Do not assign a lambda expression, use a def
    "E741", # Ambiguous variable name
    "PLR091", # Too many arguments/branches/statements
    "PLR2004", # Magic value used in comparison
    "PLW2901", # `for` loop variable is overwritten
    "RUF012", # Mutable class attributes should use `typing.ClassVar`
]

[tool.ruff.lint.pyflakes]
allowed-unused-imports = ["hvplot.pandas"]

[tool.typos.default.extend-words]
arange = "arange"
ba = "ba"
iy = "iy"
lod = "lod"
nd = "nd"
pn = "pn"
ser = "ser"
spreaded = "spreaded"
